# a2a-redis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  TASK_MEMORY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  pubsub_vs_streams_comparison.py  redis_travel_agent.py
scripts/: release.py
src/a2a_redis/: __init__.py  event_queue_protocol.py  model_utils.py  pubsub_queue.py  pubsub_queue_manager.py  push_notification_config_store.py  queue_manager.py  queue_types.py  streams_consumer_strategy.py  streams_queue.py  streams_queue_manager.py  task_store.py  utils.py
tests/: __init__.py  conftest.py  test_model_utils.py  test_pubsub_queue.py  test_pubsub_queue_manager.py  test_push_notification_config_store.py  test_queue_manager.py  test_streams_queue_manager.py  test_task_store.py  test_utils.py
